--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,18 @@
-<h1>This is the index file for testing</h1>
+<% @users.each do |user| %>
+  <div class="container-sm">
+    <div class="card mb-3">
+      <div class="row g-0">
+        <div class="col-md-4" style="width: 140px;">
+          <img src="<%= user.photo %>" class="img-fluid rounded" alt="User Photo">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title"><%= link_to user.name, user_path(user), style: "text-decoration: none;" %></h5>
+            <p class="card-text"><small class="text-muted">Number of posts: <%= user.posts_counter %></small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<% end %>
