--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
         <img src ='<%= @user.photo %>' class="img-fluid rounded" alt="User Photo">
       </div>
       <div class="col-md-8">
-        <div class="card-body" style="border: 1px solid black; margin-top: 5px;">
+        <div class="card-body" style="border: 1px solid black; margin-top: 5px; width: 1345px;">
           <h5 class="card-title"><%= @user.name %></h5>
           <p class="card-text"><small class="text-muted">
             Number of posts: <%= @user.posts_counter %></small>
