--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,7 +30,7 @@
       </div>
       <% if post.comments.any? %>
         <% @posts.each do |post| %>
-          <% post.comments.each do |comment|%>
+          <% post.five_most_recent_comments.each do |comment|%>
             <div class="card mb-3" style="width: 100%;">
               <div class="card-body text-success text-bg-light p-3">
                 <p class = "m-0"><strong><%= comment.author.name%></strong>: 
