Fix styling related to comment

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -23,13 +23,13 @@
         <p class="card-text">
           <%= post.text %>
         </p>
-        <div class= "d-flex card-text">
-          <a href='<%= new_user_post_comment_path(user_id: post.author_id, post_id: post.id)%>'>
-            <span class="btn btn-primary">Comments</span>
+        <div class= "d-flex card-text" style="gap: 10px;">
+          <a href='<%= new_user_post_comment_path(user_id: post.author_id, post_id: post.id)%>' class="btn btn-primary">
+            <span>Comments</span>
           </a>
-          <button class= "btn btn-light" disabled>
+          <p style="margin-top: 20px;">
             <%= post.comments_counter%>
-          </button>
+          </p>
         </div>
         <div class= "card-text" style="float: right">
           <span class="card-text">Comments: <%= post.comments_counter%></span>
