--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
     </div>
   </div>
   <% @recent_posts.each do |post|%>
-    <div class="card border-success mb-3">
+    <div class="card border-dark mb-3">
       <div class="card-body text-success">
         <a href = <%= user_post_path(post.author.id, post.id) %> style="text-decoration: none;">
           <h5 class="card-title">Post <%= @recent_posts.index(post) + 1%></h5>
@@ -32,9 +32,13 @@
         <p class="card-text">
           <%= post.text %>
         </p>
-        <div class= "card-text">
-          <span class="card-text">Comments: <%= post.comments_counter%></span>
-          <span class="card-text">Likes: <%= post.likes_counter%></span>
+        <div class= "d-flex card-text" style="gap: 10px;">
+          <a href='<%= new_user_post_comment_path(user_id: post.author_id, post_id: post.id)%>' class="btn btn-primary">
+            <span>Comments</span>
+          </a>
+          <p style="margin-top: 20px;">
+            <%= post.comments_counter%>
+          </p>
         </div>
       </div>
     </div>
