--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,7 +20,7 @@
         <a href = <%= user_post_path(post.author.id, post.id) %> style="text-decoration: none;">
           <h5 class="card-title">Post <%= @posts.index(post) + 1%></h5>
           <p class="card-text">
-            <small class="text-muted">
+            <small class="text-muted" style='font-size: 70%;'>
               <%= post.created_at.strftime("%B %d, %Y") %>
             </small>
           </p>
