--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
               <%= f.label :email %>
-              <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", class: "form-control" %>
             </div>
             <div class="form-group">
               <%= f.label :bio %>
@@ -31,11 +31,11 @@
             </div>
             <div class="form-group">
               <%= f.label :password %>
-              <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password (6 characters minimum)", class: "form-control" %>
+              <%= f.password_field :password, autocomplete: "new-password", placeholder: "******", class: "form-control" %>
             </div>
             <div class="form-group">
               <%= f.label :password_confirmation %>
-              <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "******", class: "form-control" %>
             </div>
             <div class="text-center" style="margin-top: 20px;">
               <%= f.submit "Sign up", class: "btn btn-primary" %>
